fixed Long emails will wrap instead of overflowing

--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -240,3 +240,12 @@ tbody tr:nth-child(odd) {
   width: 80vw;
   table-layout: fixed;
 }
+/* Add this to prevents text overflow and wraps long strings*/
+.table td {
+  word-break: break-word;
+  max-width: 200px;
+  white-space: normal;
+  padding: 8px;
+  vertical-align: top;
+}
+
